deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
spec:
  selector:
    matchLabels:
      app: playground
  replicas: 1
  template:
    metadata:
      labels:
        app: playground
    spec:
      serviceAccountName: default-service-account
      containers:
      - name: playground
        image: jeluard/substrate-playground@sha256:a116d38bf39a65eebe1ada0d1a49a7004aa851b3267b605db7234a2e9d45338f
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: playground-http
  labels:
    app: playground
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: playground
---
# Creates an ingress associating the certificate to the LoadBalancer
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: playground-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "34.95.81.114"
    networking.gke.io/managed-certificates: playground-certificate
spec:
  backend:
    serviceName: playground-http
    servicePort: 80
